# context-engineering-intro

./: .env.local  .gitignore  .skip-template  .wslconfig  AGENTS.md  README.md
.claude/: settings.local.json
card-battle-arena/: .env.example  .env.prod.example  .gitignore  ACTION_PLAN_FOR_IMPROVEMENT.md  API_DOCS.md  DATABASE_FIX_COMPLETE.md  DEPLOYMENT.md  DEVELOPMENT.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_FIX.md  FRONTEND_LOGIN_FIX_SUMMARY.md  INITIAL.md  LICENSE  LOCAL_BACKEND_STARTUP.md  LOGIN_ERROR_FIX_COMPLETE.md  PROJECT_REFLECTION_ANALYSIS.md  PROJECT_SUMMARY.md  PRP.md  QUICK_START.md  README.md  TEST_ACCOUNTS_QUICK_START.md  create-test-users.bat  docker-compose-simple.yml  docker-compose.prod.yml  docker-compose.yml  package.json  start-backend-local.bat  stop-backend-local.bat
card-battle-arena-v2/: DEVELOPMENT_SUMMARY.md  INTERACTIVE_UI_SUMMARY.md  PYGAME_MAIN_SCRIPT_PLAN.md  README.md  TDD_SUCCESS_SUMMARY.md  UI布局分析与改进方案.md  main.py  布局改进实施指南.md
card-battle-arena-v2/backend/: TDD_DEMONSTRATION.md  TDD_UI布局改进实施报告.md  __init__.py  debug_combat.py  debug_mana.py  demo_game.py  demo_vs_ai.py  enhanced_ai_battle.py  enhanced_demo.py  full_game_demo.py  interactive_demo.py  interactive_game.py  pygame_vs_ai_demo.py  quick_ai_test.py  requirements.txt  run_green_tests.py  run_red_tests.py  run_tdd_integration_tests.py  run_tests.py  simple_ai_demo.py  test_ai_enhanced.py  test_ai_mana_fix.py  test_ai_quick.py  test_ai_vs_player.py  test_components_nopygame.py  test_components_simple.py  test_enhanced_renderer.py  test_fix.py  test_game_fonts.py  test_hero_power_green.py  test_hero_power_red.py  test_hero_power_refactor.py  test_layout_improvements.py  test_simple_fonts.py  test_time_import.py  test_user_scenario.py  test_window_improvements.py  test_window_simple.py  test_windows_fonts.py  verify_improved_ui.py  (+1 more)
card-battle-arena-v2/backend/app/game/: cards.py  effects.py  engine.py  state.py
card-battle-arena-v2/backend/app/visualization/: enhanced_renderer.py  font_manager.py  improved_interactive_renderer.py  interactive_renderer.py  (+3 more)
card-battle-arena-v2/backend/tests/: test_effects.py  test_game_engine.py  test_game_play_visualization.py  test_mana_system.py  test_pygame_components.py  test_pygame_visualization.py  test_ui_layout_improvements.py
card-battle-arena-v2/cli/: __init__.py  exceptions.py  launcher.py  parser.py
card-battle-arena-v2/config/: __init__.py  default_settings.json  exceptions.py  game_modes.py  settings.py
card-battle-arena-v2/docs/: GAME_DESIGN.md
card-battle-arena-v2/myenv/: pyvenv.cfg
card-battle-arena-v2/myenv/Scripts/: activate  activate.bat
card-battle-arena-v2/scripts/: start_game.sh
card-battle-arena-v2/tests/: test_integration.py  test_main.py
card-battle-arena/.github/workflows/: ci.yml
card-battle-arena/PRPs/: web-card-battle-game.md
card-battle-arena/backend/: .env.example  FRIENDSHIP_FIX_SUMMARY.md  MODEL_FIXES.md  QUALITY_IMPROVEMENTS_COMPLETE.md  alembic.ini  async_db_test.py  create_user_sessions_table.sql  main.py  pyproject.toml  pytest.ini  requirements.txt  run_migration.py  run_migrations.py  run_quality_tests.py  run_tests.py  seed_cards.py  simple_db_test.py  test_bcrypt.py  test_db_connection.py  test_login_fix.py  test_models.py  test_redis_quality.py  test_relationships.py  test_relationships_only.py  test_sqlalchemy_metadata.py  timeout_db_test.py  validate_fix.py  validate_models_syntax.py  verify_database_fix.py
card-battle-arena/backend/alembic/: env.py
card-battle-arena/backend/alembic/versions/: 001_initial_migration.py
card-battle-arena/backend/app/api/: dependencies.py
card-battle-arena/backend/app/api/routes/: auth.py  health.py
card-battle-arena/backend/app/core/: config.py  security.py
card-battle-arena/backend/app/core/game/: card_effects.py  engine.py  state.py
card-battle-arena/backend/app/core/matchmaking/: matcher.py
card-battle-arena/backend/app/core/websocket/: events.py  manager.py  rooms.py
card-battle-arena/backend/app/database/: postgres.py  redis.py
card-battle-arena/backend/app/models/: __init__.py  card.py  deck.py  game.py  user.py
card-battle-arena/backend/app/routes/: cards.py  decks.py  matchmaking.py
card-battle-arena/backend/app/schemas/: card.py  deck.py  matchmaking.py  user.py
card-battle-arena/backend/scripts/: README_TEST_USERS.md  create_test_users.py  create_test_users_fixed.py
card-battle-arena/backend/tests/: conftest.py  test_auth.py  test_cards.py  test_game_engine.py  test_matchmaking.py  test_websocket.py
card-battle-arena/backend/tests/app/: __init__.py
card-battle-arena/backend/tests/app/api/: __init__.py
card-battle-arena/backend/tests/app/api/routes/: __init__.py  test_auth.py
card-battle-arena/backend/tests/app/database/: __init__.py  test_redis_service.py
card-battle-arena/backend/tests/integration/: test_auth_integration.py  test_redis_integration.py
card-battle-arena/docker/development/: Dockerfile.backend  Dockerfile.backend.optimized  Dockerfile.backend.simple  Dockerfile.frontend
card-battle-arena/docker/production/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
card-battle-arena/frontend/: .env.example  .eslintrc.cjs  fix-dependencies.sh  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  test-login-fix.js  tsconfig.json  vite.config.ts
card-battle-arena/frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts  test-fixes.tsx
card-battle-arena/monitoring/: prometheus.yml
card-battle-arena/nginx/conf.d/: default.conf
card-battle-arena/scripts/: README.md  deploy-windows.ps1  deploy.sh  final-verification.sh  health-check.sh  init-data.py  quality-check.ps1  quality-check.sh  quick-start.bat  quick-start.ps1  setup.sh  simple-verification.sh  start-services.bat  start-windows.bat
(+72 files in other folders)
